--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/eslint-config": "^3.0.1",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.4",
     "eslint": "^7.32.0",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
     "expo-status-bar": "~1.0.4",
     "prettier": "^2.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-confirmation-code-input": "^1.0.4",
-    "react-native-encrypted-storage": "^4.0.2",
-    "react-native-mmkv-storage": "^0.6.0",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
