--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
-    "toggle-switch-react-native": "^3.2.0"
+    "toggle-switch-react-native": "^3.2.0",
+    "expo-screen-orientation": "~3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
