--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/eslint-config": "^3.0.1",
+    "@react-navigation/drawer": "^6.1.6",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.4",
     "eslint": "^7.32.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-screen-orientation": "~3.2.1",
     "expo-status-bar": "~1.0.4",
     "prettier": "^2.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-confirmation-code-input": "^1.0.4",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-svg": "^12.1.1",
@@ -33,8 +37,7 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
-    "toggle-switch-react-native": "^3.2.0",
-    "expo-screen-orientation": "~3.2.1"
+    "toggle-switch-react-native": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
