--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^7.32.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-linear-gradient": "~9.2.0",
     "expo-screen-orientation": "~3.2.1",
     "expo-status-bar": "~1.0.4",
     "prettier": "^2.4.1",
@@ -26,6 +27,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-paper": "^4.9.2",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "^3.2.0",
@@ -37,8 +39,7 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
-    "toggle-switch-react-native": "^3.2.0",
-    "expo-linear-gradient": "~9.2.0"
+    "toggle-switch-react-native": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
