Implement a lot of things like REDUX for user ANswers

--- a/app.json
+++ b/app.json
@@ -13,7 +13,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "requireFullScreen": true
@@ -26,6 +28,8 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": "CDL aka commercial driver license app for the future truck driver to pass exam easily.",
+    "githubUrl": "https://github.com/Atash3000/Simpe-CDL.git"
   }
 }
