--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/eslint-config": "^3.0.1",
     "@react-navigation/drawer": "^6.1.6",
@@ -18,6 +19,7 @@
     "eslint": "^7.32.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-font": "~9.2.1",
     "expo-linear-gradient": "~9.2.0",
     "expo-screen-orientation": "~3.2.1",
     "expo-status-bar": "~1.0.4",
